30/03/09:
  - Fixed streaming interoperability with Live555 
  - More fixed and speed improvement in VRML/BIFS scripting
  - Added support for PBuffers on Win32/DirectX

02/12/08: GPAC 0.4.5
  - Support for AC3 in ISO Media, AC3 decoder (liba52) RTP hinting
  - Support for MediaAccessEvent (spec still under development ??)
  - Added support for user extensions (global class only) in JS through modules - cf gpac_js for sample code.
  - Initial support for 3GPP DIMS (file creation and dumping + playback)
      * Currently only SVG as overlay is supported for DIMS files, we are not sure about the specification on this topic
      * RTP hinting /playback is not supported yet      
  - Support for SVG foreignObject - all GPAC supported content can be played in a foreign object
  - Added automatic switch between 2D and 3D context for VRML/BIFS Inline node 
  - Basic support for DCCI queries: 
    * the DCCI object is exposed in scripts as 'DCCIRoot'
    * the related document can be specified in GPAC configuration file in the [General] section with the 'EnvironmentFile' key 
      pointing to an XML file to use as the ontology context
    * DCCI's propertyFilters are NOT supported yet.   
  - Added support for YCbCr OpenGL texturing (only tested with GL_MESA_ycbcr_texture)
  - Fixed bugs in OSS audio (100% CPU usage when no audio to play) and ALSA (broken playback)
  - Initial support for YUV overlays on Win32 and Linux (Needs XVideo) 
      * only one overlay at the moment
      * Vector graphics /images can be drawn above the overlay if the video output supports dest color keying
  - Changed 3D mesh object to be slightly more compact (colors and normal)
  - Unified focus model for SVG and MPEG-4. MPEG-4 focus can only be used through tab/-tab (no north/east/.. navigation)
      * The MPEG-4 focus is based on the groups (2D/3D) presenting interactive features (sensors)
        * keyboard mapping for sensors is: